admin register added, kazakh python course added
