# docs/swagger.yaml
@@ -5,13 +5,6 @@ definitions:
       status:
         type: string
     type: object
-  auth.Auth:
-    properties:
-      access_token:
-        type: string
-      refresh_token:
-        type: string
-    type: object
   auth.ConfirmRegisterRequest:
     properties:
       code:
@@ -48,6 +41,22 @@ definitions:
         type: string
     type: object
   auth.ResetPasswordRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      password_confirm:
+        type: string
+    type: object
+  auth.confirmRegisterRequest:
+    properties:
+      code:
+        type: string
+      email:
+        type: string
+    type: object
+  auth.registerRequest:
     properties:
       email:
         type: string
@@ -330,6 +339,20 @@ definitions:
       updated_at:
         type: string
     type: object
+  internal_ports_http_handlers_admin_auth.Auth:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
+  internal_ports_http_handlers_auth.Auth:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
   queries.category:
     properties:
       created_at:
@@ -459,6 +482,51 @@ info:
   title: Learning Platform API
   version: "1.0"
 paths:
+  /api/v1/admin/auth/confirm:
+    post:
+      consumes:
+      - application/json
+      description: Confirm admin user registration using confirmation code
+      parameters:
+      - description: user email and confirmation code
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/auth.confirmRegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/internal_ports_http_handlers_admin_auth.Auth'
+      summary: Confirm admin register
+      tags:
+      - auth
+  /api/v1/admin/auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Register admin user with email and password and confirm password.
+        Then send confirmation code to user email
+      parameters:
+      - description: user credentials
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/auth.registerRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/api.EmptySuccessResponse'
+      summary: Register admin user
+      tags:
+      - auth
   /api/v1/auth/confirm:
     post:
       consumes:
@@ -477,7 +545,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/auth.Auth'
+            $ref: '#/definitions/internal_ports_http_handlers_auth.Auth'
       summary: Confirm register
       tags:
       - auth
@@ -521,7 +589,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/auth.Auth'
+            $ref: '#/definitions/internal_ports_http_handlers_auth.Auth'
       summary: Login user
       tags:
       - auth
@@ -543,7 +611,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/auth.Auth'
+            $ref: '#/definitions/internal_ports_http_handlers_auth.Auth'
       summary: Refresh token
       tags:
       - auth
