# internal/ports/http/handlers/admin/auth/register.go
@@ -7,16 +7,16 @@ import (
 	"net/http"
 )
 
-// @Summary Register user
-// @Description Register user with email and password and confirm password. Then send confirmation code to user email
+// @Summary Register admin user
+// @Description Register admin user with email and password and confirm password. Then send confirmation code to user email
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Param request body RegisterRequest true "user credentials"
+// @Param request body registerRequest true "user credentials"
 // @Success 200 {object} api.EmptySuccessResponse "Success"
-// @Router /api/v1/auth/register [post]
+// @Router /api/v1/admin/auth/register [post]
 func (c *Controller) register(w http.ResponseWriter, r *http.Request) {
-	var req RegisterRequest
+	var req registerRequest
 	if err := api.GetData(r, &req); err != nil {
 		api.SendError(w, http.StatusBadRequest, err)
 		return
